--- a/Datasets/T-drive/README
+++ b/Datasets/T-drive/README
@@ -2,5 +2,12 @@ T-Drive is dataset collected in Beijing and featuring taxi drivers.
 It features a high number of users (more than 10,000) over a very short period of time (one week).
 Only a sample of the whole dataset, that was collected by Microsoft Research, is released.
 
+[1] Jing Yuan, Yu Zheng, Xing Xie, and Guangzhong Sun. Driving with knowledge from the physical world. In The 17th ACM SIGKDD international conference on Knowledge Discovery and Data mining, KDD'11, New York, NY, USA, 2011. ACM.
+
+[2] Jing Yuan, Yu Zheng, Chengyang Zhang, Wenlei Xie, 
+Xing Xie, Guangzhong Sun, and Yan Huang. T-drive: driving directions based on taxi trajectories.
+In Proceedings of the 18th SIGSPATIAL International Conference on Advances in Geographic Information Systems,
+GIS '10, pages 99-108, New York, NY, USA,2010. ACM.
+
 Link: https://www.microsoft.com/en-us/research/publication/t-drive-trajectory-data-sample/
 
